[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>", "Mathieu Amiot <amiot.mathieu@gmail.com>"]
description = "System URI API library"
documentation = "https://docs.rs/system_uri"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "system_uri"
readme = "README.md"
repository = "https://github.com/OtaK/system_uri"
version = "0.5.0"
edition = "2018"

[dependencies]
libc  = { version = "0.2", optional = true }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
rand = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.7"
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
xdg-basedir = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
